--- a/app/src/main/res/layout/activity_git_example.xml
+++ b/app/src/main/res/layout/activity_git_example.xml
@@ -12,5 +12,5 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Can't Stump the Trump" />
 </RelativeLayout>
